<resources>
    <string name="app_name">小布口袋</string>
    <string name="tabbar_assets_txt">资产</string>
    <string name="tabbar_discover_txt">发现</string>
    <string name="tabbar_profile_txt">我的</string>
    <string name="fragment_title_tx_detail_txt">交易详情</string>
    <string name="create_wallet_info_txt_1">请仔细抄写下方助记词，并存放在安全的地方</string>
    <string name="create_wallet_txt">创建钱包</string>
    <string name="function_opening">功能即将开放</string>
    <string name="tabbr_wallet_txt">钱包</string>
    <string name="wallet_create_txt">创建数字身份</string>
    <string name="wallet_create_create_btn_txt">立即创建</string>
    <string name="wallet_create_recover_btn_txt">恢复身份</string>
    <string name="hint_wallet_create_form_input_identity_name">请创建身份名</string>
    <string name="wallet_create_form_input_identity_name_empty">请输入身份名</string>
    <string name="wallet_create_form_input_password_empty">请输入密码</string>
    <string name="wallet_create_form_input_rePassword_empty">请再次确认密码</string>
    <string name="wallet_create_form_error1">两次密码输入不一致</string>
    <string name="wallet_create_form_error4">身份名只允许输入字母/汉字/数字/下划线，并且长度不能超过20个字符</string>
    <string name="wallet_create_form_error5">钱包名称只允许输入字母/汉字/数字/下划线，并且长度不能超过20个字符</string>
    <string name="wallet_create_creating_txt">创建中</string>
    <string name="wallet_create_created_txt">创建成功</string>
    <string name="wallet_create_ok_btn">确认</string>
    <string name="hint_wallet_create_form_create_btn_txt">创建</string>
    <string name="otc_top_bar_buy_txt">购买</string>
    <string name="otc_top_bar_sell_txt">出售</string>
    <string name="view_title_backup_wallet">备份钱包</string>
    <string name="view_title_create_wallet_identity">创建身份</string>
    <string name="backup_wallet_txt2">请确保在四周无人，没有摄像头的安全环境下备份</string>
    <string name="backup_wallet_btn_txt">备份助记词</string>
    <string name="view_title_backup_mneonic_code">备份助记词</string>
    <string name="skip_backup_mneonic_btn_code">跳过</string>
    <string name="no_backup_mneonic_btn_code">暂不备份</string>
    <string name="backup_mneonic_code_txt1">请勿截图</string>
    <string name="backup_mneonic_code_txt2">泄露助记词将导致资产丢失，请抄写下助记词并存放在安全的地方</string>
    <string name="backup_mneonic_code_txt3">请按顺序记录每个词，并妥善保管</string>
    <string name="backup_mneonic_code_btn_txt">我已抄好</string>
    <string name="view_title_confirm_mneonic_code">确认助记词</string>
    <string name="confirm_mneonic_code_txt">请按顺序点击助记词，以确认您正确备份</string>
    <string name="confirm_mneonic_code_btn_txt">完成</string>
    <string name="wallet_password_confirm_title">密码确认</string>
    <string name="wallet_password_confirm_txt1">请填写身份密码以确认备份</string>
    <string name="hint_wallet_password_confirm_txt1">6~30个字符，建议混合大小写字母加数字</string>
    <string name="hint_wallet_password_confirm_submit_btn">确认</string>
    <string name="wallet_send_txt">转账</string>
    <string name="wallet_scan_txt">扫一扫</string>
    <string name="wallet_scan_notice">将二维码放入框中，即可自动扫描</string>
    <string name="wallet_scan_cancel">取消扫描</string>
    <string name="recently_tx_txt">最近交易记录</string>
    <string name="no_recently_tx_record">暂无交易记录</string>
    <string name="tx_status_success_txt">成功</string>
    <string name="tx_status_fail_txt">失败</string>
    <string name="tx_status_runing">处理中</string>
    <string name="tx_status_fail_txt1">转账失败</string>
    <string name="tx_status_fail_txt3">合约调用失败</string>
    <string name="tx_timeout_txt1">请求超时</string>
    <string name="password_comfirm_dialog_title">密码确认</string>
    <string name="password_comfirm_dialog_sub_txt">请填写安全密码以确认交易</string>
    <string name="password_comfirm_dialog_send_txt">请填写安全密码以确认转出</string>
    <string name="view_title_wallet_sendBU">转账</string>
    <string name="send_note_title">备注</string>
    <string name="send_fee_title">最多支付交易费用(BU)</string>
    <string name="send_fee_title_no_bu">最多支付交易费用</string>
    <string name="send_input_receiver_address_hint">请输入接收方地址</string>
    <string name="no_backup_tips_btn">请备份</string>
    <string name="send_amount_title">转账数量</string>
    <string name="send_hint_txt1">请输入转账数量</string>
    <string name="send_hint_txt2">备注限20字符内</string>
    <string name="send_hint_txt3">请输交易费用</string>
    <string name="send_status_success_txt">转账成功</string>
    <string name="send_tx_handleing_txt">处理中</string>
    <string name="send_tx_sign_txt">签名中</string>
    <string name="send_tx_verify">校验中</string>
    <string name="send_tx_bu_not_enough">BU余额不足</string>
    <string name="send_tx_fee_not_enough">交易费用不足</string>
    <string name="send_status_fee">预估最多支付费用</string>
    <string name="tx_timeout_err">交易超时</string>
    <string name="send_status_note">备注</string>
    <string name="send_available_balance_txt">可用余额</string>
    <string name="send_form_next_btn_txt">下一步</string>
    <string name="tx_from">发送账户</string>
    <string name="tx_to">接收账户</string>
    <string name="tx_fee">交易费</string>
    <string name="tx_memo">备注</string>
    <string name="tx_hash">交易哈希</string>
    <string name="tx_time">交易时间</string>
    <string name="tx_value">数量</string>
    <string name="tx_value_bu">数量(BU)</string>
    <string name="tx_to_bu">对方账户(BU地址)</string>
    <string name="tx_fee_bu">交易费(BU)</string>
    <string name="tx_from_en">From</string>
    <string name="tx_to_en">To</string>
    <string name="tx_fee_en">Tx Fee</string>
    <string name="tx_hash_en">Tx Hash</string>
    <string name="tx_memo_en">Memo</string>
    <string name="tx_time_en">Timestamp</string>
    <string name="tx_value_en">Value</string>
    <string name="create_wallet_fail">创建失败</string>
    <string name="checking_password_error">安全密码输入有误</string>
    <string name="geting_account_bu_balance">获取中</string>
    <string name="check_mneonic_code_err1">助记词顺序有误，请您核对后更正</string>
    <string name="next_key_down_err">再按一次退出程序</string>
    <string name="qr_pocket_address_title">钱包地址</string>
    <string name="qr_cancel_btn_des">取消</string>
    <string name="qr_copy_btn_text">复制钱包地址</string>
    <string name="qr_pic_name_text">钱包地址二维码</string>
    <string name="qr_copy_success_message">已复制到剪切板</string>
    <string name="help_txt">帮助与反馈</string>
    <string name="version_txt">版本号</string>
    <string name="language_txt">多语言</string>
    <string name="pocket_version">V2.0.1</string>
    <string name="send_confirm_title">确认转账</string>
    <string name="send_confirm_txt">请确认转账信息是否有误</string>
    <string name="send_confirm_submit_btn_txt">提交</string>
    <string name="use_terms_title">使用条款</string>
    <string name="use_terms_checkbox_agree">我已阅读并同意以上条款内容</string>
    <string name="use_terms_next_btn">继续</string>
    <string name="emptyView_mode_desc_fail_title">加载失败</string>
    <string name="emptyView_mode_desc_fail_desc">请检测网络是否能正常连接</string>
    <string name="emptyView_mode_desc_retry">点击重试</string>
    <string name="emptyView_mode_desc_no_data">暂无数据</string>
    <string name="invalid_address">BU 地址不正确，请重新输入</string>
    <string name="send_err1">不能给自己转账</string>
    <string name="invalid_amount">无效的转账数量</string>
    <string name="amount_too_small">转账数量单笔不可少于</string>
    <string name="amount_too_big">转账数量单笔不可超过100,000,000</string>
    <string name="invalid_tx_fee">最多支付交易费用格式有误，请重新输入</string>
    <string name="tx_fee_too_big">最多支付交易费用不可超过10 BU</string>
    <string name="balance_not_enough">可用余额不足</string>
    <string name="send_token_note_too_long">备注信息不能超过20个字</string>
    <string name="send_loading">处理中...</string>
    <string name="splash_txt0">BU Pocket</string>
    <string name="splash_txt1">泛在价值流通区块链网络</string>
    <string name="change_pwd_old_pwd">旧密码</string>
    <string name="change_pwd_new_pwd">新密码</string>
    <string name="change_pwd_new_pwd_confirm">确认密码</string>
    <string name="change_pwd_old_pwd_hint">请输入旧密码</string>
    <string name="change_pwd_new_pwd_hint">请输入新密码</string>
    <string name="change_pwd_new_pwd_confirm_hint">请确认新密码</string>
    <string name="change_pwd_err1">请输入旧密码</string>
    <string name="change_pwd_err2">请输入新密码</string>
    <string name="change_pwd_err3">请确认新密码</string>
    <string name="change_pwd_err4">请输入旧密码</string>
    <string name="change_pwd_err5">请输入旧密码</string>
    <string name="change_pwd_form_error1">密码和确认密码输入不一致，请重新输入</string>
    <string name="change_pwd_form_error2">6~30个字符，建议混合大小写字母加数字</string>
    <string name="change_pwd_form_error3">6~30个字符，建议混合大小写字母加数字</string>
    <string name="change_pwd_form_error4">身份名格式不对</string>
    <string name="change_pwd_form_error5">6~30个字符，建议混合大小写字母加数字</string>
    <string name="change_pwd_form_error6">旧密码错误</string>
    <string name="change_pwd_changing_txt">密码修改中...</string>
    <string name="change_pwd_change_success_txt">密码修改成功</string>
    <string name="help_title_txt">您遇到的问题或建议</string>
    <string name="contact_title_txt">您的联系方式</string>
    <string name="help_hint">请输入您遇到的问题或建议</string>
    <string name="contact_hint">请输入您的联系方式</string>
    <string name="submit_feedback_btn_txt">提交</string>
    <string name="user_info_title">我的身份</string>
    <string name="user_info_wallet_name">身份名</string>
    <string name="user_info_wallet_id">身份 ID</string>
    <string name="user_info_backup_current_wallet">备份身份</string>
    <string name="user_info_logout">退出当前身份</string>
    <string name="user_info_logout_title">退出当前身份</string>
    <string name="user_info_logout_loading">退出中</string>
    <string name="user_info_backup_loading">加载中</string>
    <string name="user_info_logout_notice">即将退出当前身份，请确保身份已备份</string>
    <string name="user_info_logout_warning">警告：若未妥善备份，退出后将无法找回身份，请慎重处理该操作</string>
    <string name="common_dialog_cancel">取消</string>
    <string name="common_dialog_confirm">确认</string>
    <string name="common_dialog_input_pwd">请输入密码</string>
    <string name="help_feedback_submit_success_msg">提交成功</string>
    <string name="help_feedback_submit_failed_msg">提交失败</string>
    <string name="content_empty_msg">请输入您的问题或反馈</string>
    <string name="content_too_long_msg">问题或建议内容过长，不能超过100个字</string>
    <string name="contact_empty_msg">请输入您的联系方式</string>
    <string name="contact_too_long_msg">联系方式内容过长，不能超过20个字</string>
    <string name="language_cn">简体中文</string>
    <string name="language_en">English</string>
    <string name="import_wallet_title_txt">导入钱包</string>
    <string name="start_import_wallet">开始导入</string>
    <string name="add_address_name">名称</string>
    <string name="add_address_name_hint">输入账户地址对应的名称</string>
    <string name="add_address_describe">描述</string>
    <string name="optional">（选填）</string>
    <string name="add_address_describe_hint">账户地址描述</string>
    <string name="add_address_public_addr">地址</string>
    <string name="add_address_public_addr_hint">BU账户地址</string>
    <string name="start_create_wallet">开始创建</string>
    <string name="create_wallet_name_err_hint">允许输入字母/汉字/数字/下划线，且不能超过20个字符</string>
    <string name="create_wallet_pw_err_hint">6-30个字符，大小写字母和数字任意两种组合</string>
    <string name="import_mnemonic_wallet_name">请设置钱包名称</string>
    <string name="hint_wallet_create_form_input_password">请设置安全密码</string>
    <string name="recover_edit_mneonic_code_hint">12个英文单词，请按空格分隔单词</string>
    <string name="wallet_import_keystore_et_hint_txt">请填写由BUMO官方钱包生成的Keystore文件</string>
    <string name="password_for_keystore_et_hint_txt">请输入导出Keystore时使用的安全密码</string>
    <string name="password_for_keystore_txt">请输入安全密码</string>
    <string name="wallet_import_private_et_hint_txt">请填写您的私钥</string>
    <string name="change_wallet_name_hint">用于区分其他钱包，不能超过20个字符</string>
    <string name="wallet_service_title">钱包服务</string>
    <string name="wallet_service_hint">请输入钱包服务地址</string>
    <string name="node_service_title">节点服务</string>
    <string name="node_service_hint">请输入节点服务地址</string>
    <string name="start_custom_service">启用</string>
    <string name="start_custom_service_hint">此处启用为最高等级，启用后将适用于小布口袋APP全部应用操作，请确认后再启用，且启用后不可编辑。</string>
    <string name="note">注意：</string>
    <string name="hint_wallet_create_form_input_rePassword">请再次确认安全密码</string>
    <string name="wallet_create__input_rePassword">请再次输入安全密码</string>
</resources>