<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bp_create_wallet_layout_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/common_left_right_padding"
            android:paddingRight="@dimen/common_left_right_padding">


            <include layout="@layout/view_mnemonic_hint" />


            <EditText
                android:id="@+id/mnemonicWordEt"
                style="@style/BPEditTextMultiInput"
                android:layout_marginTop="15dp"
                android:hint="@string/recover_edit_mneonic_code_hint"
                android:paddingLeft="15dp"
                android:paddingTop="12dp"/>

            <TextView
                style="@style/BPTextViewCreateWallet"
                android:layout_marginTop="30dp"
                android:text="@string/import_mnemonic_wallet_name" />

            <EditText
                android:id="@+id/walletNameEt"
                android:theme="@style/BPEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_wallet_name_hint" />

            <TextView
                style="@style/BPTextViewCreateWallet"
                android:text="@string/hint_wallet_create_form_input_password" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordEt"
                    android:theme="@style/BPEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_wallet_pw_err_hint"
                    android:inputType="textPassword|textMultiLine" />

                <ImageView
                    android:id="@+id/passwordIv"
                    style="@style/BPCreateWalletEye"
                    android:src="@mipmap/icon_close_eye" />

            </RelativeLayout>

            <TextView
                style="@style/BPTextViewCreateWallet"
                android:text="@string/hint_wallet_create_form_input_rePassword" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordConfirmEt"
                    android:theme="@style/BPEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wallet_create__input_rePassword"
                    android:inputType="textPassword" />

                <ImageView
                    android:id="@+id/passwordConfirmIv"
                    style="@style/BPCreateWalletEye"
                    android:src="@mipmap/icon_close_eye" />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/startImportMnemonicWordBtn"
        style="@style/BPCreateWalletGreenBtn"
        android:text="@string/start_import_wallet"
        app:qmui_backgroundColor="@color/app_color_green_disabled"
        app:qmui_borderColor="@color/app_color_green_disabled"
        app:qmui_radius="5dp" />


</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>