<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bp_create_wallet_layout_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/common_left_right_padding"
            android:paddingRight="@dimen/common_left_right_padding">


            <include layout="@layout/view_mnemonic_hint" />

            <EditText
                android:id="@+id/privateKeyEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_corner_gray_stroke"
                android:gravity="top"
                android:hint="@string/wallet_import_private_et_hint_txt"
                android:minLines="6"
                android:paddingLeft="15dp"
                android:paddingTop="12dp"
                android:textSize="15sp" />

            <TextView
                style="@style/BPTextViewCreateWallet"
                android:layout_marginTop="30dp"
                android:text="@string/import_mnemonic_wallet_name" />

            <EditText
                android:id="@+id/walletNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_wallet_name_hint"
                android:theme="@style/BPEditText" />

            <TextView
                style="@style/BPTextViewCreateWallet"
                android:text="@string/hint_wallet_create_form_input_password" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_wallet_pw_err_hint"
                    android:inputType="textPassword|textMultiLine"
                    android:theme="@style/BPEditText" />

                <ImageView
                    android:id="@+id/passwordIv"
                    style="@style/BPCreateWalletEye"
                    android:src="@mipmap/icon_close_eye" />

            </RelativeLayout>


            <TextView
                style="@style/BPTextViewCreateWallet"
                android:text="@string/hint_wallet_create_form_input_rePassword" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordConfirmEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wallet_create__input_rePassword"
                    android:inputType="textPassword"
                    android:theme="@style/BPEditText" />

                <ImageView
                    android:id="@+id/passwordConfirmIv"
                    style="@style/BPCreateWalletEye"
                    android:src="@mipmap/icon_close_eye" />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>


    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/startImportPrivateBtn"
        style="@style/BPCreateWalletGreenBtn"
        android:enabled="false"
        android:text="@string/start_import_wallet"
        app:qmui_backgroundColor="@color/app_color_green_disabled"
        app:qmui_borderColor="@color/app_color_green_disabled"
        app:qmui_radius="5dp" />


</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>