<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_white"
    >

    <TextView
        android:id="@+id/tvCreateWallet"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/create_wallet_txt"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/tvRecoverWallet"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/import_wallet_title_txt"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/tvDeleteWallet"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/common_dialog_cancel"
        android:gravity="center"
        />

</LinearLayout>