<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bp_create_wallet_layout_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/common_left_right_padding"
            android:paddingRight="@dimen/common_left_right_padding">

            <include layout="@layout/view_mnemonic_hint" />

            <EditText
                android:id="@+id/keystoreEt"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_corner_gray_stroke"
                android:gravity="top"
                android:hint="@string/wallet_import_keystore_et_hint_txt"
                android:paddingLeft="15dp"
                android:paddingTop="12dp"
                android:textSize="15sp" />

            <TextView
                style="@style/BPTextViewCreateWallet"
                android:layout_marginTop="30dp"
                android:text="@string/import_mnemonic_wallet_name" />

            <EditText
                android:id="@+id/walletNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_wallet_name_hint"
                android:theme="@style/BPEditText" />

            <TextView
                style="@style/BPTextViewCreateWallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_for_keystore_txt" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_for_keystore_et_hint_txt"
                    android:inputType="textPassword|textMultiLine"
                    android:theme="@style/BPEditText" />

                <ImageView
                    android:id="@+id/passwordIv"
                    style="@style/BPCreateWalletEye" />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>


    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/startImportKeystoreBtn"
        style="@style/BPCreateWalletGreenBtn"
        android:enabled="false"
        android:text="@string/start_import_wallet"
        app:qmui_backgroundColor="@color/app_color_green_disabled"
        app:qmui_borderColor="@color/app_color_green_disabled"
        app:qmui_radius="4dp" />


</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>