<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_white_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:layout_marginBottom="@dimen/bp_create_wallet_layout_bottom"
        android:orientation="vertical"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/qmui_config_color_white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/common_left_right_padding"
            android:paddingRight="@dimen/common_left_right_padding">

            <include
                layout="@layout/view_create_wallet_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/create_wallet_name_title"
                style="@style/BPTextViewCreateWallet"
                android:text="@string/hint_wallet_create_form_input_identity_name" />


            <EditText
                android:id="@+id/create_wallet_identity_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_wallet_name_err_hint"
                android:inputType=""
                android:theme="@style/BPEditText" />


            <TextView
                style="@style/BPTextViewCreateWallet"
                android:text="@string/hint_wallet_create_form_input_password" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_wallet_set_pwd_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_wallet_pw_err_hint"
                    android:inputType="textPassword|textMultiLine"
                    android:theme="@style/BPEditText" />

                <ImageView
                    android:id="@+id/recoverShowPwdIv"
                    style="@style/BPCreateWalletEye" />

            </RelativeLayout>


            <TextView
                style="@style/BPTextViewCreateWallet"
                android:text="@string/hint_wallet_create_form_input_rePassword" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <EditText
                    android:id="@+id/create_wallet_repeat_pwd_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:hint="@string/wallet_create__input_rePassword"
                    android:inputType="textPassword"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"
                    android:theme="@style/BPEditText" />

                <ImageView
                    android:id="@+id/recoverShowConfirmPwdIv"
                    style="@style/BPCreateWalletEye" />
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

    </ScrollView>


    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/createWalletSubmitBtn"
        style="@style/BPComGreenBgWhiteTextBtn"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/bp_btn_bottom_margin"
        android:enabled="false"
        android:text="@string/start_create_wallet"
        android:textSize="18sp"
        app:qmui_backgroundColor="@color/app_color_green_disabled"
        app:qmui_borderColor="@color/app_color_green_disabled"
        app:qmui_radius="5dp" />

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />

</android.support.design.widget.CoordinatorLayout>
